--- a/neopets-classic.html
+++ b/neopets-classic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neopets Classic Inspired Layout with Two Sidebars</title>
+    <title>Neopets Classic Inspired</title>
     <style>
         /* Body Styling */
         body {
@@ -166,7 +166,7 @@
 
     <!-- Header Section -->
     <div class="header">
-        <h1>Neopets Classic Inspired Layout</h1>
+        <h1>Neopets Classic</h1>
     </div>
 
     <!-- Main Content Section with Two Sidebars -->
@@ -230,7 +230,7 @@
 
     <!-- Footer Section -->
     <div class="footer">
-        <p>© 2024 Neopets Classic Inspired Layout. All rights reserved.</p>
+        <p>Neopets Classic Inspired</p>
     </div>
 
 </body>
